--- a/src/styles.css
+++ b/src/styles.css
@@ -6,11 +6,20 @@
 
 body {
   @apply m-0;
-  font-family: 'Open Sans', sans-serif;
+  font-family:
+    'Inter',
+    system-ui,
+    -apple-system,
+    'Segoe UI',
+    Roboto,
+    sans-serif;
   font-optical-sizing: auto;
-  font-weight: <weight>;
+  font-weight: 400;
   font-style: normal;
-  font-variation-settings: 'wdth' 100;
+  font-variant-numeric: tabular-nums;
+  font-variation-settings:
+    'wght' 400,
+    'slnt' 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
